# Synther2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  synther.cc  synther.cpp
configured/: CMakeLists.txt  config.h.in
design/: UML.drawio
include/logic/: key.h  keyboard.h  note.h
src/: CMakeLists.txt  synther.cpp
src/logic/: CMakeLists.txt  key.cc  note.cc  note.cpp
tests/: CMakeLists.txt  test_key.cc  test_note.cc
